--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tocopymodules",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://makmn1.github.io/Assignment_06_Project_2/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -12,7 +13,7 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "predeploy": "npm run buil",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
